Added Figure 1b. code interpretation from original paper.

--- a/Paper_Summary.Rmd
+++ b/Paper_Summary.Rmd
@@ -23,7 +23,7 @@ library(dplyr)
 library(tidyr)
 ```
 
-```{r assay 1 simulation}
+```{r Assay 1: Figure 1a. Simulation & Analysis}
 ###Trait of Interest: Creating normally distributed female fly populations with average value corresponding to their average number of sexual interactions. Four populations corresponding to the 4 different combinations between female fly size and environment type. (small females in cages, small females in vials, large females in cages, large females in vials)
 
 # Sample Data (replace with your actual data)
@@ -52,3 +52,25 @@ ggplot(data, aes(x = Environment, y = Mean, fill = Size)) + scale_y_continuous(b
   scale_fill_manual(values = c("#B6D0E2", "#F1E3D3"))  # Pastel blue and yellow for the legend
 ```
 
+```{r Assay 1: Figure 1b. Simulation & Analysis}
+MeanFeeding_Small<-c(10,9)
+MeanFeeding_Large<-c(6.5,13.5)
+EnvironmentType<-c('Vial','Cage')
+x<-c(1,2)
+SD = c(1, 1, 1, 1)
+
+plot(MeanFeeding_Small, axes=FALSE, xlab= "Mating Arena", ylab="Average Number of Feedings Observed", ylim=c(4,16), pch=15, col="#B6D0E2", type='o', lwd=2, cex=1.5)
+axis(2)
+axis(1, at=seq_along(MeanFeeding_Small), labels = as.character(EnvironmentType), las=0)
+lines(c(1,2), MeanFeeding_Large, col="#F1E3D3", pch=17, type="o", lty = 2, lwd=2, cex=1.5)
+
+# Vertical error bars the good ole fashion way
+arrows(x0=x, y0=MeanFeeding_Small-SD, x1=x, y1=MeanFeeding_Small+SD, code=3, angle=90, length=0.1)
+arrows(x0=x, y0=MeanFeeding_Large-SD, x1=x, y1=MeanFeeding_Large+SD, code=3, angle=90, length=0.1)
+
+# Creating a legend that labels the female size types with different colours - corresponds to the colours in the previous graph
+legend('topleft',inset=0.05,c("Small","Large"), lty=c(1,2), col=c("#B6D0E2","#F1E3D3"), lwd=2, title="Female Size")
+
+#Turn plot outline into a box to make it more cutesy
+box()
+```
