--- a/Registered Report.Rmd
+++ b/Registered Report.Rmd
@@ -29,19 +29,27 @@ library(pbkrtest)
 library(pscl)
 ```
 
-```{r test}
+### Description
+
+Code looks to simulate assortative mating between two species to form hybrids. This assortative mating will be based on q scores which can range from 0 (which indicates species 1) to 1 (which indicates species 2) and intermediate values which indicate hybrids of the two. The code will simulate two types of assortative mating, the strict definition which means that individuals will want to mate with someone with an identical q score and the extreme phenotype definition which is where individuals will want to mate with someone with either a higher or lower q score than them. The code will simulate individual maternal and paternal datasets and then pair them up based on either of the two assortative mating definitions previously mentioned. The aformentioned pairing will be visualized in a scatterplot to show the mating patterns. Then hybrids will be generated based on those previous mating patterns that will be a blend of the q scores of both parents. The q scores of the hybrids will be plotted to show how different assortative mating patterns influence hybrid zone outcomes. 
+
+```{r Assortative Mating - Strict Definition}
 # Set a seed for reproducibility
 set.seed(123)
 
-# Create two datasets, `q_maternal` and `q_paternal`, each with 1000 data points following a beta distribution
-q_maternal <- rbeta(1000, 1, 1)
-q_paternal <- rbeta(1000, 1, 1)
+# Create two datasets, q_maternal and q_paternal, each with 1000 data points following a beta distribution where the most common q scores are 1 or 0 but there are hybrids
+q_maternal <- rbeta(1000, 0.3, 0.3)
+q_paternal <- rbeta(1000, 0.3, 0.3)
 
-# Create a new dataset, `sampled_q_maternal`, by sampling 500 q scores without replacement from the `q_maternal` dataset
+# Display simulated dataset distribution before sampling
+hist(q_paternal)
+hist(q_maternal)
+
+# Create a new dataset, sampled_q_maternal, by sampling 500 q scores without replacement from the q_maternal dataset
 sampled_q_maternal <- sample(q_maternal, 500, replace=FALSE)
 
-# Create a new variable, `sampled_q_paternal`, by sampling 500 q scores from the `q_paternal` dataset
-# Use the `ifelse()` function to set the probability of selecting a q score from `q_paternal` based on the corresponding q score in `sampled_q_maternal`
+# Create a new variable, sampled_q_paternal, by sampling 500 q scores from the q_paternal dataset
+# Use the ifelse() function to set the probability of selecting a q score from q_paternal based on the corresponding q score in sampled_q_maternal
 sampled_q_paternal <- sapply(sampled_q_maternal, function(x) {
   if (x >= 0.5) {
     sample(q_paternal[q_paternal >= 0.5], 1, prob = rep(0.9 / length(q_paternal[q_paternal >= 0.5]), length(q_paternal[q_paternal >= 0.5])))
@@ -50,26 +58,30 @@ sampled_q_paternal <- sapply(sampled_q_maternal, function(x) {
   }
 })
 
-# Create a new dataframe, `q_scores_df`, by combining `sampled_q_maternal` and `sampled_q_paternal`
+# Create a new dataframe, `q_scores_df`, by combining sampled_q_maternal and sampled_q_paternal
 q_scores_df <- data.frame(sampled_q_maternal, sampled_q_paternal)
 
-# Plot a scatterplot of `sampled_q_paternal` versus `sampled_q_maternal` to visualize the relationship between the two variables
+# Plot a scatterplot of sampled_q_paternal versus sampled_q_maternal to visualize the relationship between the two variables where mating is based on having a similar q score
 plot(sampled_q_maternal, sampled_q_paternal, xlab="Sampled Maternal q scores", ylab="Sampled Paternal q scores", main="Scatterplot of Maternal vs Paternal q scores")
 ```
 
-```{r test 2}
+```{r Assortative Mating - Extreme Phenotype Preference}
 # Set a seed for reproducibility
 set.seed(123)
 
 # Create two datasets, `q_maternal` and `q_paternal`, each with 1000 data points following a beta distribution
-q_maternal <- rbeta(1000, 1, 1)
-q_paternal <- rbeta(1000, 1, 1)
+q_maternal <- rbeta(1000, 0.3, 0.3)
+q_paternal <- rbeta(1000, 0.3, 0.3)
 
-# Create a new dataset, `sampled_q_maternal`, by sampling 500 q scores without replacement from the `q_maternal` dataset
+# Display simulated dataset distribution before sampling
+hist(q_paternal)
+hist(q_maternal)
+
+# Create a new dataset, sampled_q_maternal, by sampling 500 q scores without replacement from the q_maternal dataset
 sampled_q_maternal <- sample(q_maternal, 500, replace=FALSE)
 
-# Create a new variable, `sampled_q_paternal`, by sampling 500 q scores from the `q_paternal` dataset
-# Use the `ifelse()` function to set the probability of selecting a q score from `q_paternal` based on the corresponding q score in `sampled_q_maternal`
+# Create a new variable, sampled_q_paternal, by sampling 500 q scores from the q_paternal dataset
+# Use the ifelse() function to set the probability of selecting a q score from q_paternal based on the corresponding q score in sampled_q_maternal
 sampled_q_paternal <- sapply(sampled_q_maternal, function(x) {
   if (x <= 0.5) {
     # If the maternal q score is less than or equal to 0.5, sample from the lower half of the paternal q scores with higher probability
@@ -80,23 +92,10 @@ sampled_q_paternal <- sapply(sampled_q_maternal, function(x) {
   }
 })
 
-# Create a new dataframe, `q_scores_df`, by combining `sampled_q_maternal` and `sampled_q_paternal`
+# Create a new dataframe, q_scores_df, by combining sampled_q_maternal and sampled_q_paternal
 q_scores_df <- data.frame(sampled_q_maternal, sampled_q_paternal)
 
-# Plot a scatterplot of `sampled_q_paternal` versus `sampled_q_maternal` to visualize the relationship between the two variables
+# Plot a scatterplot of sampled_q_paternal versus sampled_q_maternal to visualize the relationship between the two variables where they are paired based on extreme q score preference
 plot(sampled_q_maternal, sampled_q_paternal, xlab="Sampled Maternal q scores", ylab="Sampled Paternal q scores", main="Scatterplot of Maternal vs Paternal q scores")
 ```
-```{r Data Simulation}
-# Simulate q score data for maternal and paternal species in a beta distribution with a random mating pattern to draw samples from. 
-q_maternal <- rbeta(1000, 1, 1)
-q_paternal <- rbeta(1000, 1, 1)
 
-# Visualize random mating pattern following a beta distribution
-hist(q_paternal)
-hist(q_maternal)
-
-# Sample and group q scores to indicate predicted mating patterns 
-maternal_random <- sample(q_maternal, 500, replace = FALSE)
-
-# Add correlation test at one point
-```
