--- a/Registered Report.Rmd
+++ b/Registered Report.Rmd
@@ -31,8 +31,9 @@ library(pscl)
 
 ### Description
 
-Code looks to simulate assortative mating between two species to form hybrids. This assortative mating will be based on q scores which can range from 0 (which indicates species 1) to 1 (which indicates species 2) and intermediate values which indicate hybrids of the two. The code will simulate two types of assortative mating, the strict definition which means that individuals will want to mate with someone with an identical q score and the extreme phenotype definition which is where individuals will want to mate with someone with either a higher or lower q score than them. The code will simulate individual maternal and paternal datasets and then pair them up based on either of the two assortative mating definitions previously mentioned. The aformentioned pairing will be visualized in a scatterplot to show the mating patterns. Then hybrids will be generated based on those previous mating patterns that will be a blend of the q scores of both parents. The q scores of the hybrids will be plotted to show how different assortative mating patterns influence hybrid zone outcomes. 
+Code looks to simulate assortative mating between two species to form hybrids. This assortative mating will be based on q scores which can range from 0 (which indicates species 1) to 1 (which indicates species 2) and intermediate values which indicate hybrids of the two. The code will simulate two types of assortative mating, the strict definition which means that individuals will want to mate with someone with an identical q score and the extreme phenotype definition which is where individuals will want to mate with someone with either a higher or lower q score than them. The code will simulate individual maternal and paternal datasets and then pair them up based on either of the two assortative mating definitions previously mentioned. The aformentioned pairing will be visualized in a scatterplot to show the mating patterns. Then, offspring will be generated based on those previous mating patterns that will be a blend of the q scores of both parents. The q scores of the offspring will be plotted to show how different assortative mating patterns influence hybrid zone outcomes. 
 
+### Assortative Mating - Strict Definition
 ```{r Assortative Mating - Strict Definition}
 # Set a seed for reproducibility
 set.seed(123)
@@ -63,8 +64,22 @@ q_scores_df <- data.frame(sampled_q_maternal, sampled_q_paternal)
 
 # Plot a scatterplot of sampled_q_paternal versus sampled_q_maternal to visualize the relationship between the two variables where mating is based on having a similar q score
 plot(sampled_q_maternal, sampled_q_paternal, xlab="Sampled Maternal q scores", ylab="Sampled Paternal q scores", main="Scatterplot of Maternal vs Paternal q scores")
+
+q_scores_df$averaged_q_scores <- (q_scores_df$sampled_q_maternal + q_scores_df$sampled_q_paternal) / 2
+# Estimate the density of averaged_q_scores
+# density_averaged_q_scores <- density(q_scores_df$averaged_q_scores)
+
+# Plot the density plot which shows offspring q scores based on extreme phenotype assortative mating
+plot(density(q_scores_df$averaged_q_scores), 
+     main = "Density Plot of Offspring q Scores",
+     xlab = "q score",
+     ylab = "Density")
+
+# Add a rug plot to the bottom of the density plot to show the individual data points that make up the distribution
+rug(q_scores_df$averaged_q_scores)
 ```
 
+### Assortative Mating - Extreme Phenotype Preference
 ```{r Assortative Mating - Extreme Phenotype Preference}
 # Set a seed for reproducibility
 set.seed(123)
@@ -97,5 +112,17 @@ q_scores_df <- data.frame(sampled_q_maternal, sampled_q_paternal)
 
 # Plot a scatterplot of sampled_q_paternal versus sampled_q_maternal to visualize the relationship between the two variables where they are paired based on extreme q score preference
 plot(sampled_q_maternal, sampled_q_paternal, xlab="Sampled Maternal q scores", ylab="Sampled Paternal q scores", main="Scatterplot of Maternal vs Paternal q scores")
-```
 
+q_scores_df$averaged_q_scores <- (q_scores_df$sampled_q_maternal + q_scores_df$sampled_q_paternal) / 2
+# Estimate the density of averaged_q_scores
+# density_averaged_q_scores <- density(q_scores_df$averaged_q_scores)
+
+# Plot the density plot which shows offspring q scores based on extreme phenotype assortative mating
+plot(density(q_scores_df$averaged_q_scores), 
+     main = "Density Plot of Offspring q Scores",
+     xlab = "q score",
+     ylab = "Density")
+
+# Add a rug plot to the bottom of the density plot to show the individual data points that make up the distribution
+rug(q_scores_df$averaged_q_scores)
+```
