--- a/Registered Report.Rmd
+++ b/Registered Report.Rmd
@@ -31,7 +31,7 @@ library(pscl)
 
 ### Description
 
-Code looks to simulate assortative mating between two species to form hybrids. This assortative mating will be based on q scores which can range from 0 (which indicates species 1) to 1 (which indicates species 2) and intermediate values which indicate hybrids of the two. The code will simulate two types of assortative mating, the strict definition which means that individuals will want to mate with someone with an identical q score and the extreme phenotype definition which is where individuals will want to mate with someone with either a higher or lower q score than them. The code will simulate individual maternal and paternal datasets and then pair them up based on either of the two assortative mating definitions previously mentioned. The aformentioned pairing will be visualized in a scatterplot to show the mating patterns. Then, offspring will be generated based on those previous mating patterns that will be a blend of the q scores of both parents. The q scores of the offspring will be plotted to show how different assortative mating patterns influence hybrid zone outcomes. 
+Code looks to simulate assortative mating between two species to potentially form hybrid offspring. This assortative mating will be based on q scores which can range from 0 (which indicates species 1) to 1 (which indicates species 2) and intermediate values which indicate hybrids of the two. The code will simulate two types of assortative mating, the strict definition which means that individuals will want to mate with someone with an identical q score and the extreme phenotype definition which is where individuals will want to mate with someone with either a higher or lower q score than them. The code will simulate individual maternal and paternal datasets and then pair them up based on either of the two assortative mating definitions previously mentioned. The aformentioned pairing will be visualized in a scatterplot to show the mating patterns. Then, offspring will be generated based on those previous mating patterns that will be a blend of the q scores of both parents. The q scores of the offspring will be plotted to show how different assortative mating patterns influence hybrid zone outcomes. A correlation test will be performed on the data to understand the relationship between the q scores.  
 
 ### Assortative Mating - Strict Definition
 ```{r Assortative Mating - Strict Definition}
@@ -77,6 +77,14 @@ plot(density(q_scores_df$averaged_q_scores),
 
 # Add a rug plot to the bottom of the density plot to show the individual data points that make up the distribution
 rug(q_scores_df$averaged_q_scores)
+
+# Perform Spearman rank correlation test
+cor_test_result <- cor.test(q_scores_df$sampled_q_maternal, 
+                           q_scores_df$sampled_q_paternal, 
+                           method = "spearman")
+
+# Print the correlation test result
+print(cor_test_result)
 ```
 
 ### Assortative Mating - Extreme Phenotype Preference
@@ -125,4 +133,13 @@ plot(density(q_scores_df$averaged_q_scores),
 
 # Add a rug plot to the bottom of the density plot to show the individual data points that make up the distribution
 rug(q_scores_df$averaged_q_scores)
+
+# Perform Spearman rank correlation test
+cor_test_result <- cor.test(q_scores_df$sampled_q_maternal, 
+                           q_scores_df$sampled_q_paternal, 
+                           method = "spearman")
+
+# Print the correlation test result
+print(cor_test_result)
 ```
+
