--- a/Registered Report.Rmd
+++ b/Registered Report.Rmd
@@ -35,22 +35,26 @@ Code looks to simulate assortative mating between two species to potentially for
 
 ### Assortative Mating - Strict Definition
 ```{r Assortative Mating - Strict Definition}
-# Set a seed for reproducibility
-set.seed(123)
-
 # Create two datasets, q_maternal and q_paternal, each with 1000 data points following a beta distribution where the most common q scores are 1 or 0 but there are hybrids
 q_maternal <- rbeta(1000, 0.3, 0.3)
 q_paternal <- rbeta(1000, 0.3, 0.3)
 
-# Display simulated dataset distribution before sampling
-hist(q_paternal)
-hist(q_maternal)
+# Display simulated dataset distributions before sampling
+hist(q_paternal,
+     main = "Paternal q scores",
+     xlab = "q scores"
+     )
+     
+hist(q_maternal,
+     main = "Maternal q scores",
+     xlab = "q scores"
+     )
 
 # Create a new dataset, sampled_q_maternal, by sampling 500 q scores without replacement from the q_maternal dataset
-sampled_q_maternal <- sample(q_maternal, 500, replace=FALSE)
+sampled_q_maternal <- sample(q_maternal, 500, replace = FALSE)
 
 # Create a new variable, sampled_q_paternal, by sampling 500 q scores from the q_paternal dataset
-# Use the ifelse() function to set the probability of selecting a q score from q_paternal based on the corresponding q score in sampled_q_maternal
+# Use the ifelse() function to set the probability of selecting a q score from q_paternal based on the corresponding q score in sampled_q_maternal, in this case the function x represents sampled maternal q scores that are then being matched with sampled paternal q scores based on preset probabilities. 
 sampled_q_paternal <- sapply(sampled_q_maternal, function(x) {
   if (x >= 0.5) {
     sample(q_paternal[q_paternal >= 0.5], 1, prob = rep(0.9 / length(q_paternal[q_paternal >= 0.5]), length(q_paternal[q_paternal >= 0.5])))
@@ -59,26 +63,26 @@ sampled_q_paternal <- sapply(sampled_q_maternal, function(x) {
   }
 })
 
-# Create a new dataframe, `q_scores_df`, by combining sampled_q_maternal and sampled_q_paternal
+# Create a new dataframe, q_scores_df, by combining sampled_q_maternal and sampled_q_paternal
 q_scores_df <- data.frame(sampled_q_maternal, sampled_q_paternal)
 
 # Plot a scatterplot of sampled_q_paternal versus sampled_q_maternal to visualize the relationship between the two variables where mating is based on having a similar q score
 plot(sampled_q_maternal, sampled_q_paternal, xlab="Sampled Maternal q scores", ylab="Sampled Paternal q scores", main="Scatterplot of Maternal vs Paternal q scores")
 
+# To plot offspring q scores, take the q scores of the parents from the previous data frame and average them 
 q_scores_df$averaged_q_scores <- (q_scores_df$sampled_q_maternal + q_scores_df$sampled_q_paternal) / 2
-# Estimate the density of averaged_q_scores
-# density_averaged_q_scores <- density(q_scores_df$averaged_q_scores)
 
-# Plot the density plot which shows offspring q scores based on extreme phenotype assortative mating
+
+# Plot the density plot which shows offspring q scores based on the strict definition of assortative mating
 plot(density(q_scores_df$averaged_q_scores), 
-     main = "Density Plot of Offspring q Scores",
+     main = "Density Plot of Offspring q scores",
      xlab = "q score",
      ylab = "Density")
 
 # Add a rug plot to the bottom of the density plot to show the individual data points that make up the distribution
 rug(q_scores_df$averaged_q_scores)
 
-# Perform Spearman rank correlation test
+# Perform Spearman rank correlation test between maternal and paternal q scores
 cor_test_result <- cor.test(q_scores_df$sampled_q_maternal, 
                            q_scores_df$sampled_q_paternal, 
                            method = "spearman")
@@ -89,28 +93,32 @@ print(cor_test_result)
 
 ### Assortative Mating - Extreme Phenotype Preference
 ```{r Assortative Mating - Extreme Phenotype Preference}
-# Set a seed for reproducibility
-set.seed(123)
-
-# Create two datasets, `q_maternal` and `q_paternal`, each with 1000 data points following a beta distribution
+# Create two datasets, q_maternal and q_paternal, each with 1000 data points following a beta distribution
 q_maternal <- rbeta(1000, 0.3, 0.3)
 q_paternal <- rbeta(1000, 0.3, 0.3)
 
 # Display simulated dataset distribution before sampling
-hist(q_paternal)
-hist(q_maternal)
+hist(q_paternal,
+     main = "Paternal q scores",
+     xlab = "q scores"
+     )
+     
+hist(q_maternal,
+     main = "Maternal q scores",
+     xlab = "q scores"
+     )
 
 # Create a new dataset, sampled_q_maternal, by sampling 500 q scores without replacement from the q_maternal dataset
 sampled_q_maternal <- sample(q_maternal, 500, replace=FALSE)
 
 # Create a new variable, sampled_q_paternal, by sampling 500 q scores from the q_paternal dataset
-# Use the ifelse() function to set the probability of selecting a q score from q_paternal based on the corresponding q score in sampled_q_maternal
+# Use the ifelse() function to set the probability of selecting a q score from q_paternal based on the corresponding q score in sampled_q_maternal, in this case the function x represents sampled maternal q scores that are then being matched with sampled paternal q scores based on preset probabilities.
 sampled_q_paternal <- sapply(sampled_q_maternal, function(x) {
   if (x <= 0.5) {
-    # If the maternal q score is less than or equal to 0.5, sample from the lower half of the paternal q scores with higher probability
+    # If the maternal q score is less than or equal to 0.5, sample from the lower half of the paternal q scores with higher probability with a nested if statement where if maternal q score is less than 0.25 it has a probability of 0.9 and if it is between 0.5 and 0.25 it has a probability of 0.1
     sample(q_paternal[q_paternal <= 0.5], 1, prob = ifelse(q_paternal[q_paternal <= 0.5] <= 0.25, 0.9, 0.1))
   } else {
-    # If the maternal q score is greater than 0.5, sample from the upper half of the paternal q scores with higher probability
+    # If the maternal q score is greater than 0.5, sample from the upper half of the paternal q scores with higher probability with a nested if statement where if maternal q score is greater than 0.75 it has a selection probability of 0.9 and if it is between 0.5 and 0.75 it has a probability of 0.1
     sample(q_paternal[q_paternal > 0.5], 1, prob = ifelse(q_paternal[q_paternal > 0.5] >= 0.75, 0.9, 0.1))
   }
 })
@@ -121,9 +129,9 @@ q_scores_df <- data.frame(sampled_q_maternal, sampled_q_paternal)
 # Plot a scatterplot of sampled_q_paternal versus sampled_q_maternal to visualize the relationship between the two variables where they are paired based on extreme q score preference
 plot(sampled_q_maternal, sampled_q_paternal, xlab="Sampled Maternal q scores", ylab="Sampled Paternal q scores", main="Scatterplot of Maternal vs Paternal q scores")
 
+# To plot offspring q scores, take the q scores of the parents from the previous data frame and average them 
 q_scores_df$averaged_q_scores <- (q_scores_df$sampled_q_maternal + q_scores_df$sampled_q_paternal) / 2
-# Estimate the density of averaged_q_scores
-# density_averaged_q_scores <- density(q_scores_df$averaged_q_scores)
+
 
 # Plot the density plot which shows offspring q scores based on extreme phenotype assortative mating
 plot(density(q_scores_df$averaged_q_scores), 
@@ -134,7 +142,7 @@ plot(density(q_scores_df$averaged_q_scores),
 # Add a rug plot to the bottom of the density plot to show the individual data points that make up the distribution
 rug(q_scores_df$averaged_q_scores)
 
-# Perform Spearman rank correlation test
+# Perform Spearman rank correlation test between maternal and paternal q scores
 cor_test_result <- cor.test(q_scores_df$sampled_q_maternal, 
                            q_scores_df$sampled_q_paternal, 
                            method = "spearman")
